# scan-pyproject

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
api/: app.py  dockerfile
api/core/: __init__.py
core/: bigquery.py  getter.py  github.py
frontend/: dockerfile  package-lock.json
frontend/app/: layout.tsx
frontend/pages/: _document.tsx
