[project]
name = "scan-pyproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuta0306", email = "yuta.20010306@gmail.com" }
]
dependencies = [
    "google-cloud-bigquery>=3.11.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "mypy>=1.4.1",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "pytest>=7.4.0",
    "types-requests>=2.31.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
